crates/jmdict/tests/it/snapshots/it__jmdict__parse_dialect.snap
---
source: crates/jmdict/tests/it/jmdict.rs
assertion_line: 106
expression: result
---
entries:
  - id: 1234567
    kanjis:
      - kanji: 言葉
        info: []
        priority: []
    readings:
      - reading: ことば
        nokanji: false
        to_form: []
        info: []
        priority: []
    senses:
      - to_form: []
        to_reading: []
        pos:
          - noun
        misc: []
        info: []
        dialects:
          - brazilian
          - hokkaidoBen
          - kansaiBen
          - kantouBen
          - kyotoBen
          - kyuushuuBen
          - naganoBen
          - osakaBen
          - ryuukyuuBen
          - touhokuBen
          - tosaBen
          - tsugaruBen
        meanings:
          - some meaning
  - id: 9999999
    kanjis:
      - kanji: ＪＭｄｉｃｔ
        info: []
        priority: []
    readings:
      - reading: ジェイエムディクト
        nokanji: false
        to_form: []
        info: []
        priority: []
    senses:
      - to_form: []
        to_reading: []
        pos:
          - unclassified
        misc: []
        info: []
        dialects: []
        meanings:
          - "Japanese-Multilingual Dictionary Project - Creation Date: 2024-08-23"
creation_date: 2024-08-23
