crates/jmdict/tests/it/snapshots/it__jmdict__parse_jmdict.snap
---
source: crates/jmdict/tests/it/jmdict.rs
assertion_line: 60
expression: result
---
entries:
  - id: 1000040
    kanjis:
      - kanji: 〃
        info: []
        priority: []
    readings:
      - reading: おなじ
        nokanji: false
        to_form: []
        info: []
        priority: []
      - reading: おなじく
        nokanji: false
        to_form: []
        info: []
        priority: []
    senses:
      - to_form: []
        to_reading: []
        pos:
          - noun
        misc: []
        info: []
        dialects: []
        meanings:
          - ditto mark
  - id: 1000050
    kanjis:
      - kanji: 仝
        info: []
        priority: []
    readings:
      - reading: どうじょう
        nokanji: false
        to_form: []
        info: []
        priority: []
    senses:
      - to_form: []
        to_reading: []
        pos:
          - noun
        misc: []
        info: []
        dialects: []
        meanings:
          - "\"as above\" mark"
  - id: 9999999
    kanjis:
      - kanji: ＪＭｄｉｃｔ
        info: []
        priority: []
    readings:
      - reading: ジェイエムディクト
        nokanji: false
        to_form: []
        info: []
        priority: []
    senses:
      - to_form: []
        to_reading: []
        pos:
          - unclassified
        misc: []
        info: []
        dialects: []
        meanings:
          - "Japanese-Multilingual Dictionary Project - Creation Date: 2024-08-23"
creation_date: 2024-08-23
