crates/jmdict/tests/it/snapshots/it__jmdict__parse_jmdict_2.snap
---
source: crates/jmdict/tests/it/jmdict.rs
assertion_line: 136
expression: result
---
entries:
  - id: 1580500
    kanjis:
      - kanji: 剰え
        info:
          - rareKanjiForm
        priority: []
      - kanji: 剰
        info:
          - irregularOkurigana
          - rareKanjiForm
        priority: []
    readings:
      - reading: あまつさえ
        nokanji: false
        to_form: []
        info: []
        priority: []
      - reading: あまっさえ
        nokanji: false
        to_form: []
        info: []
        priority: []
    senses:
      - to_form: []
        to_reading: []
        pos:
          - adverb
        misc:
          - usuallyKanaAlone
        info:
          - usu. negative nuance
        dialects: []
        meanings:
          - besides
          - moreover
          - in addition
creation_date: ~
