crates/jmdict/tests/it/snapshots/it__jmdict__xml_parse.snap
---
source: crates/jmdict/tests/it/jmdict.rs
assertion_line: 42
expression: result
---
entries:
  - id: 1000040
    kanjis:
      - kanji: 〃
        info: []
        priority: []
    readings:
      - reading: おなじ
        nokanji: false
        to_form: []
        info: []
        priority: []
      - reading: おなじく
        nokanji: false
        to_form: []
        info: []
        priority: []
    senses:
      - to_form: []
        to_reading: []
        pos:
          - noun
        misc: []
        info: []
        dialects: []
        meanings:
          - ditto mark
  - id: 1000050
    kanjis:
      - kanji: 仝
        info: []
        priority: []
    readings:
      - reading: どうじょう
        nokanji: false
        to_form: []
        info: []
        priority: []
    senses:
      - to_form: []
        to_reading: []
        pos:
          - noun
        misc: []
        info: []
        dialects: []
        meanings:
          - "\"as above\" mark"
